style.css
* {
  box-sizing: border-box;
}

svg {
  font-family: sans-serif;
  width: 100%;
  height: 100%;
}

#root {
  position: fixed;
  left: 50px;
  top: 50px;
  right: 50px;
  bottom: 50px;
}

#game-over {
  position: absolute;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
  text-align: center;
  font-size: 40px;
  font-family: sans-serif;
  font-style: italic;
  padding: 20px;
  background-color: #26547F;
  border-radius: 10px;
  color: rgb(230, 230, 230);
}

#reset {
  margin: 10px;
  font-size: 40px;
  background-color: #0069CC;
  color: white;
  border-radius: 5px;
  border: none;
  padding: 5px 10px;
}

#swapButton {
  cursor: pointer;
  pointer-events: visible;
}

#overlay {
  display: none;
  background-color: transparent;
  position: fixed;
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
}

#left {
  font-family: sans-serif;
  text-align: right;
  width: 150px;
  position: fixed;
  left: 30px;
  top: 0;
  bottom: 0;
}

#right {
  position: fixed;
  left: 210px;
  top: 0;
  bottom: 0;
  right: 0;
}

#question {
  color: rgb(180, 180, 180);
  font-size: 20pt;
  position: absolute;
  top: 100%;
  right: 0;
}

#originalProblem {
  display: none;
  color: rgb(180, 180, 180);
  font-size: 20pt;
  position: absolute;
  top: -30px;
  right: 0;
  transform: translate(0, -100%);
}

#guessBox {
  direction: rtl;
  unicode-bidi: bidi-override;
  position: relative;
  width: 100%;
  top: 0;
  bottom: 0;
  padding: 0;
  margin: 0;
  text-align: right;
  border: none;
  outline: none;
  font-size: 48pt;
  background-color: rgb(230, 230, 230);
  border-top: 3px solid black;
  visibility: hidden;
}

#problem {
  font-size: 48pt;
  position: absolute;
  right: 0;
  top: 50%;
  transform: translate(0, -50%);
}

#originalLine2 {
  margin: 20px 0;
}

#line2 {
  position: relative;
}

#star {
  display: none;
  position: absolute;
  left: 10px;
  top: 50%;
  width: 30px;
  height: 30px;
  animation: spin 2s infinite normal linear;
}

@keyframes spin {
  0% {
    transform: translate(0, -50%) scale(1) rotate(0deg);
  }
  50% {
    transform: translate(0, -50%) scale(2) rotate(359deg);
  }
  100% {
    transform: translate(0, -50%) scale(1) rotate(719deg);
  }
}

.terminal {
  pointer-events: none;
}

